--- a/src/sass/pages/_pageWork.scss
+++ b/src/sass/pages/_pageWork.scss
@@ -1,12 +1,11 @@
 .pageWork{
-    
+    overflow: hidden;
     padding:1.5rem 3rem;
-
     font-size:$default-font-size;
     line-height: $default-line-height;
     .part1{
+        margin:3rem 0;
         .explanation{
-            margin: 1rem;
             width:70%;
             height:35vh;
             
@@ -38,7 +37,7 @@
         }
     }
     .part2{
-        margin:2rem;
+        margin: 3rem 0;
         display:flex;
         height: 95vh;
         .explanation{
@@ -62,9 +61,9 @@
         }
     }
     .part3{
-        margin: 2rem;
-            display: flex;
-            height: 90vh;
+        margin: 3rem 0;
+        display: flex;
+        height: 90vh;
         .paragraphContainer{
             width:60%;
             display:flex;
@@ -84,8 +83,74 @@
             img{
                 width: 100%;
                 max-height:13vw;
-
+                object-fit: cover;
             }
         }
     }
+        .part4 {
+            display:flex;
+            margin: 3rem 0;
+            .imgGrid {
+                width: 40vw;
+                height:40vw;
+                display: grid;
+                gap: 1rem;
+                grid-template-columns: repeat(6, 1fr);
+                grid-template-rows: repeat(6, 1fr);
+                align-items: center;
+    
+                div:nth-child(1) {
+                    @include set-grid-item-location(1, 4, 1, 4);
+                    img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+    
+                div:nth-child(2) {
+                    @include set-grid-item-location(1, 4, 4, 7);
+
+
+                    img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+    
+                div:nth-child(3) {
+                    @include set-grid-item-location(4, 7, 1, 2);
+                    height: 100%;
+                    
+                    img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+    
+                div:nth-child(4) {
+                    @include set-grid-item-location(4, 7, 2, 7);
+                    height: 100%;
+
+                    img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+            .paragraphContainer{
+                display:flex;
+                flex-direction: column;
+                justify-content:space-between;
+                width:50%;
+                margin:0 3rem;
+            }
+        }
 }
