--- a/src/sass/pages/_pageWork.scss
+++ b/src/sass/pages/_pageWork.scss
@@ -8,7 +8,6 @@
         .explanation{
             width:70%;
             height:35vh;
-            
         }
         .imgParagraphContainer{
             margin:1rem;
@@ -16,11 +15,14 @@
             justify-content:space-around;
             align-items: flex-end;
             margin:0 10rem;
-            img{
+            .imgBox{
                 width:50%;
                 height:38vh;
                 flex-shrink: 4;
                 align-self: flex-end;
+                img{
+                    @extend .defaultImgItemOption;
+                }
             }
             p{
                 border-left:white 0.5vw solid;
@@ -43,20 +45,25 @@
         .explanation{
             padding:1rem;
             width:50%;
+            height:100%;
             border-right:white 0.5vw solid;
         }
         .imgGrid{
             padding:1rem 2rem;
             width: 50%;
+            height:100%;
             display:grid;
             grid-template-columns: repeat(2,1fr);
             grid-template-rows: repeat(3, 1fr);
             gap:1rem;
             align-items: center;
             
-            img{
+            .imgBox{
                 width:100%;
-                max-height:14vw;
+                height:14vw;
+                img{
+                    @extend .defaultImgItemOption;
+                }
             }
         }
     }
@@ -74,16 +81,20 @@
         .imgGrid{
             padding: 0 2rem;
             width: 40%;
+            height:100%;
             display: grid;
             gap:0.3rem;
             grid-template-columns: repeat(1, 1fr);
             grid-template-rows: repeat(3, 1fr);
             align-items: center;
 
-            img{
+            .imgBox{
                 width: 100%;
-                max-height:13vw;
-                object-fit: cover;
+                height:14vw;
+                
+                img{
+                    @extend .defaultImgItemOption;
+                }
             }
         }
     }
