feat: creating a json file and making a parsing function

--- a/src/sass/pages/_pageWork.scss
+++ b/src/sass/pages/_pageWork.scss
@@ -163,8 +163,9 @@
                 width:50%;
                 margin:0 3rem;
                 .title{
-                    width:50%;
+                    width:40%;
                     height:20vh;
+                    padding:1rem 2rem;
                     line-height:20vh;
                     text-align: center;
                     align-self:center;
