--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -149,3 +149,10 @@ body{
     background-color: black;
     color:white;
 }
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+    
