--- a/src/sass/components/_homeContentsContainer.scss
+++ b/src/sass/components/_homeContentsContainer.scss
@@ -1,10 +1,10 @@
 .homeContentsContainer {
   @extend .contentsContainer;
-
+  display:flex;
+  justify-content:center;
   height: $default-height;
-  display: flex;
-  justify-content: space-between;
   
+  align-items:center;
   .backgroundRoseImg {
     z-index: 10;
     width: 70%;
@@ -15,6 +15,19 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    
+  }
+  @include tablet {
+    .backgroundRoseImg{
+      background-image: none
+    }
+  }
+
+  @include mobile {
+    height:50vh;
+    .backgroundRoseImg {
+        background-image: none
+      }
   }
   
 }
