--- a/src/sass/layout/_sideContainer.scss
+++ b/src/sass/layout/_sideContainer.scss
@@ -4,24 +4,54 @@
     height: inherit;
     z-index: 50;
     margin-bottom: 1.6rem;
+
+    text-align:center;
     [class*="Grid"]{
         display: grid;
         grid-template-columns: 1fr;
         grid-auto-flow: rows;
         gap: 1rem;
+
     }
+    @include tablet {
+        width:40%;
+        
+    }
+        @media (max-width: $mobile-size) and (orientation:portrait){
+        margin-bottom: 0rem;
+        width:100%;
+        [class*="Grid"] {
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+
+            .shapeBox:nth-child(n+7) {
+                display: none;
+            }
+        }
+    }
+    
 }
 
 .leftSideContainer{
     @extend .sidecontainer;
+
+    
 }
 
 .rightSideContainer{
     @extend .sidecontainer;
     .smallRoseImg{
         top:0;
-        transform:translateX(0.625rem);
         width:12rem;
         height:12rem;
+        @include mobile {
+            
+            width: 8rem;
+            height: 8rem;
+        }
     }
 }
