--- a/src/sass/pages/_pageWork.scss
+++ b/src/sass/pages/_pageWork.scss
@@ -1,4 +1,5 @@
 .pageWork{
+    
     overflow: hidden;
     padding:1.5rem 3rem;
     font-size:$default-font-size;
@@ -39,7 +40,7 @@
         }
     }
     .part2{
-        margin: 3rem 0;
+        margin: 3rem 0 7rem 0;
         display:flex;
         height: 95vh;
         .explanation{
@@ -68,7 +69,7 @@
         }
     }
     .part3{
-        margin: 3rem 0;
+        margin: 7rem 0;
         display: flex;
         height: 90vh;
         .paragraphContainer{
@@ -100,7 +101,7 @@
     }
         .part4 {
             display:flex;
-            margin: 3rem 0;
+            margin: 7rem 0 0;
             .imgGrid {
                 width: 40vw;
                 height:40vw;
