--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -9,5 +9,6 @@ $default-height:80vh;
 /*default font size*/
 $default-font-size:1.5rem;
 $small-font-size:0.5rem;
+$medium-font-size:1rem;
 /*default line height*/
 $default-line-height:2rem;
