--- a/src/sass/layout/_sideContainer.scss
+++ b/src/sass/layout/_sideContainer.scss
@@ -17,7 +17,7 @@
         width:40%;
         
     }
-        @media (max-width: $mobile-size) and (orientation:portrait){
+    @media (max-width: $mobile-size) and (orientation:portrait){
         margin-bottom: 0rem;
         width:100%;
         [class*="Grid"] {
@@ -31,6 +31,7 @@
             .shapeBox:nth-child(n+7) {
                 display: none;
             }
+        
         }
     }
     
@@ -49,7 +50,7 @@
         width:12rem;
         height:12rem;
         @include mobile {
-            
+            margin-bottom:3rem;
             width: 8rem;
             height: 8rem;
         }
