--- a/src/sass/layout/_thumbnailGrid.scss
+++ b/src/sass/layout/_thumbnailGrid.scss
@@ -31,11 +31,14 @@ $ir-thumbnails: (
 
 .thumbnailGrid{
     margin:2rem 0;
+    padding:1rem;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(15rem, 1fr));
     grid-template-rows: repeat(2,10rem);
     grid-auto-rows:10rem;
     gap:1rem;
+    overflow:hidden;
     .sirsThumbnailBox{
         height:100%;
         overflow:hidden;
