feat: media query of irs page for responsive web

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -8,7 +8,9 @@ $default-height:80vh;
 
 /*default font size*/
 $default-font-size:1.5rem;
+$tablet-font-size:1.25rem;
+$mobile-font-size: 1rem;
 $small-font-size:0.5rem;
-$medium-font-size:1rem;
+
 /*default line height*/
 $default-line-height:2rem;
