--- a/src/sass/components/_irContentsContainer.scss
+++ b/src/sass/components/_irContentsContainer.scss
@@ -1,19 +1,19 @@
 .irContentsContainer {
     @extend .contentsContainer;
     .irParagraphContainer{
+        margin:2rem auto;
         margin-bottom:20rem;
         display:flex;
         flex-direction:column;
         justify-content: space-between;
         width:100%;
-        height:40vh;
-        
+        height:50vh;
         .irParagraph{
             font-size:$default-font-size;;
             line-height: $default-line-height;
             .irParagraphTitle{
                 position:relative;
-
+                font-weight: 600;
                 .irCircle {
                     transform:translate(5px,3px);
                     display: inline-block;
@@ -33,6 +33,25 @@
                 }
             }
             
+        }
+    }
+
+    @include tablet{
+        .irParagraphContainer {
+            height:70vh;
+            margin-bottom:0;
+            .irParagraph {
+                font-size:$tablet-font-size;
+            }
+        }
+    }
+    @include mobile {
+        .irParagraphContainer {
+            height:70vh;
+            margin-bottom:0;
+            .irParagraph {
+                font-size: $mobile-font-size;
+            }
         }
     }
 }
