--- a/src/sass/pages/_pageWork.scss
+++ b/src/sass/pages/_pageWork.scss
@@ -1,5 +1,4 @@
 .pageWork{
-    
     overflow: hidden;
     padding:1.5rem 3rem;
     font-size:$default-font-size;
@@ -7,11 +6,11 @@
     .part1{
         margin:3rem 0;
         .explanation{
+            margin-bottom:2rem;
             width:70%;
             height:35vh;
         }
         .imgParagraphContainer{
-            margin:1rem;
             display: flex;
             justify-content:space-around;
             align-items: flex-end;
@@ -19,8 +18,7 @@
             .imgBox{
                 width:50%;
                 height:38vh;
-                flex-shrink: 4;
-                align-self: flex-end;
+
                 img{
                     @extend .defaultImgItemOption;
                 }
@@ -31,25 +29,25 @@
                 font-size:medium;
                 line-height: 1rem;
                 width:20%;
-                height:20vh;
+                height:auto;
                 flex-shrink:1;
                 text-align: center;
                 vertical-align: middle;
-
             }
         }
     }
     .part2{
         margin: 3rem 0 7rem 0;
         display:flex;
-        height: 95vh;
+        height: auto;
         .explanation{
             padding:1rem;
             width:50%;
-            height:100%;
-            border-right:white 0.5vw solid;
+            height:inherit;
+            border-right: white 0.5vw solid;
         }
         .imgGrid{
+            align-self: center;
             padding:1rem 2rem;
             width: 50%;
             height:100%;
@@ -71,7 +69,7 @@
     .part3{
         margin: 7rem 0;
         display: flex;
-        height: 90vh;
+        height: auto;
         .paragraphContainer{
             width:60%;
             display:flex;
@@ -80,6 +78,7 @@
 
         }
         .imgGrid{
+            align-self: center;
             padding: 0 2rem;
             width: 40%;
             height:100%;
@@ -99,89 +98,171 @@
             }
         }
     }
-        .part4 {
-            display:flex;
-            margin: 7rem 0 0;
-            .imgGrid {
-                width: 40vw;
-                height:40vw;
-                display: grid;
-                gap: 1rem;
-                grid-template-columns: repeat(6, 1fr);
-                grid-template-rows: repeat(6, 1fr);
-                align-items: center;
-    
-                div:nth-child(1) {
-                    @include set-grid-item-location(1, 4, 1, 4);
-                    img {
-                        display: block;
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                }
-    
-                div:nth-child(2) {
-                    @include set-grid-item-location(1, 4, 4, 7);
+    .part4 {
+        display:flex;
+        margin: 7rem 0 0;
+        .imgGrid {
+            width: 40vw;
+            height:40vw;
+            display: grid;
+            gap: 1rem;
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: repeat(6, 1fr);
+            align-items: center;
 
-
-                    img {
-                        display: block;
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                }
-    
-                div:nth-child(3) {
-                    @include set-grid-item-location(4, 7, 1, 2);
+            div:nth-child(1) {
+                @include set-grid-item-location(1, 4, 1, 4);
+                img {
+                    display: block;
+                    width: 100%;
                     height: 100%;
-                    
-                    img {
-                        display: block;
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                }
-    
-                div:nth-child(4) {
-                    @include set-grid-item-location(4, 7, 2, 7);
-                    height: 100%;
-
-                    img {
-                        display: block;
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
+                    object-fit: cover;
                 }
             }
-            .paragraphContainer{
-                display:flex;
-                flex-direction: column;
-                justify-content:space-between;
-                width:50%;
-                margin:0 3rem;
-                .title{
-                    width:40%;
-                    height:20vh;
-                    padding:1rem 2rem;
-                    line-height:20vh;
-                    text-align: center;
-                    align-self:center;
-                    font-size:4rem;
-                    border: white 0.5vw solid;
-                    border-right:none;
-                    border-radius:15rem 0 0 15rem;
-                    
+
+            div:nth-child(2) {
+                @include set-grid-item-location(1, 4, 4, 7);
+
+
+                img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
-                .information{
-                    width:50%;
-                    height:10vh;
-                    align-self:flex-end;
-                    text-align: center;
+            }
+
+            div:nth-child(3) {
+                @include set-grid-item-location(4, 7, 1, 2);
+                height: 100%;
+                
+                img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            div:nth-child(4) {
+                @include set-grid-item-location(4, 7, 2, 7);
+                height: 100%;
+
+                img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
         }
+        .paragraphContainer{
+            display:flex;
+            flex-direction: column;
+            justify-content:space-between;
+            width:50%;
+            margin:0 2rem;
+            .title{
+                width:40%;
+                height:20vh;
+                padding:1rem 2rem;
+                margin:2rem;
+                line-height:20vh;
+                text-align: center;
+                align-self:center;
+                font-size:4rem;
+                border: white 0.5vw solid;
+                border-right:none;
+                border-radius:15rem 0 0 15rem;
+                
+            }
+            .information{
+                width:50%;
+                height:10vh;
+                align-self:flex-end;
+                text-align: center;
+            }
+        }
+    }
+
+    /*tablet size media query*/
+    @include tablet{
+        font-size:$tablet-font-size;
+        padding:1rem 2rem;
+        .part1 {
+            .explanation {
+                margin-bottom: 2rem;
+                width: 80%;
+                height: auto;
+            }
+            .imgParagraphContainer {
+                justify-content: space-around;
+                margin:0;
+    
+                .imgBox {
+                    width: 50%;
+                    height: 38vh;
+
+                }
+                p {
+                    font-size:small;
+                }
+            }
+        }
+        .part2{
+            flex-direction: column;
+            .explanation {
+                width: 100%;
+                border-left: white 0.5vw solid;
+                border-right:none;
+            }
+        
+            .imgGrid {
+                align-self:flex-start;
+                border-left: white 0.5vw solid;
+                padding: 1rem;
+                width: 100%;
+        
+                .imgBox {
+                    width: 100%;
+                    height: 25vw;
+                }
+            }
+        }
+        .part3 {
+            flex-direction:column;
+            align-items: center;
+            .paragraphContainer {
+                width: 100%;
+                p{
+                    margin:4% 0;
+                }
+            }
+
+            .imgGrid {
+                width: 60%;
+                height: auto;
+
+                .imgBox {
+                    width: 100%;
+                    height: 23vw;
+                }
+            }
+        }
+        .part4{
+            align-items:center;
+            .paragraphContainer{
+                .title{
+                    padding:0 2rem;
+                }
+            }
+            
+            
+        }
+    }
+
+    /*mobile size media query*/
+    @include mobile{
+
+    }
 }
