refactor: delete useless files

--- a/src/sass/layout/_mainFlexbox.scss
+++ b/src/sass/layout/_mainFlexbox.scss
@@ -2,7 +2,7 @@
     display:flex;
     justify-content:space-between;
     align-items: center;
-    @media (max-width: $mobile-size) and (orientation:portrait){
+    @include mobile{
         flex-direction: column;
         justify-content:center;
         margin:2rem;
